--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,8 @@
 <section id="one" class="wrapper">
 	<div class="inner">
 		<!-- Form -->
-		<h3>Seçiminizi Yapınız</h3>
+		<h2>Seçiminizi Yapınız</h2>
+		<h3>Kaç Tane Silinsin</h3>
 
 		<form method="post" action="{{ url_for('Contact') }}">
 			<div class="row uniform">
