--- a/templates/botactivited.html
+++ b/templates/botactivited.html
@@ -25,28 +25,26 @@
 	<script type=text/javascript>
 		var count = 0;
 		{% for i in eids %}
-			$.ajax({
-				url: '/incidel',
-				type: 'POST',
-				data: {x:{{i}}},
-				success: function (data) {
-					a = "<tr id='"+data+"'><td>"+data+"</td></tr>"
-					$('tbody').prepend(a);
-					$("#"+data).fadeOut(500).fadeIn(500)
-					
-					if(count >10){
-						count = 0;
-						$("tbody").empty();
+			setTimeout(function(){
+				$.ajax({
+					url: '/incidel',
+					type: 'POST',
+					data: {x:{{i}}},
+					success: function (data) {
+						a = "<tr id='"+data+"'><td>"+data+"</td></tr>"
+						$('tbody').prepend(a);
+						$("#"+data).fadeOut(500).fadeIn(500)
+						
+						if(count >10){
+							count = 0;
+							$("tbody").empty();
+						}
+						count++;
 					}
-					count++;
-				},
-				error: function (data) {
-					a = "<tr id='"+data+"'><td>"+data+"</td></tr>"
-					$('tbody').prepend(a);
-				}
-			});
+				});
+			},1000);
 		{%endfor%}
-			
+
 	</script>
 	
 	
